header spacing resolved mobile view

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -62,11 +62,11 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-    padding-top: 40px;
+    /* padding-top: 40px; */
   }
-  .page-body{
+  /* .page-body{
     padding-top: 30px;
-  }
+  } */
   .linear-gradient-bg {
     font-size: var(--cl-text-font-size, 1.05rem);
     font-weight: var(--cl-text-font-weight, 300);
